--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+:root {
+    --header-font: 'Playfair Display', serif;
+    --main-font: 'Manrope', sans-serif;
+}
+
+
 /* General Css */
 img {
     max-width: 100%;
@@ -5,11 +11,11 @@ img {
 
 /* FONTS */
 h1, h2 {
-    font-family: 'Playfair Display', serif;
+    font-family: var(--header-font);
 }
 
 .button {
-    font-family: 'Manrope', sans-serif;
+    font-family: var(--main-font);
     font-size: 15px;
 }
 
@@ -26,18 +32,19 @@ h2 {
 p {
     font-family: 'Manrope', sans-serif;
     font-size: 15x;
+    line-height: 25px;
 }
 
 
 /* Button */
-.button {
+button {
     background-color:#0E204E;
     color: white;
     padding: 6px;
     padding-left: 15px;
     padding-right: 15px;
 }
-.button:hover {
+button:hover {
         background-color: white;
         color: black;
         border: 1px solid; 
@@ -53,6 +60,12 @@ header {
 }
 
 /* Nav */
+nav ul {
+    display: flex;
+} 
+nav ul li {
+    list-style-type: none;
+}
 a {
     text-decoration: none;
     color: black;
@@ -61,39 +74,10 @@ a {
 }
 
 
-/* Flex properties */
-.section1,
-.section2,
-.section3,
-.section6,
-.section7,
-footer {
-    width: 100%;
-    margin: auto;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    
-} 
-/* padding for between sections */
-.section1,
-.section2,
-.section3,
-.section4,
-.section5,
-.section6,
-.section7,
-.section8 {
-padding-top: 50px;
-padding-bottom: 50px;
-}
-
 /* background blue and text white for the following: */
 .section1-text,
 .section1-h2,
-.section2-p,
-.section3,
+.section2-article,
 .section3-h2,
 footer {
 background-color: #0E204E;
@@ -101,12 +85,33 @@ color: white;
 }
 
 /* padding for text */
-.textpadding,
-.section1-h2,
-.section2-p,
+.text-padding,
+.section1-h2, 
 .section3-h2,
 .section3-p {
-    padding: 25px;
+    padding: 35px;
+}
+
+/* for section 1 and 2 */
+.top-section-wrapper {
+    width: 100%;
+    margin: 50px auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+/* for section 2 and 3 */
+.section-content-wrapper {
+    width: 85%;
+    /* max-width: 1440px; */
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
 
@@ -126,53 +131,67 @@ color: white;
 
 
 /* Section2 */
+
 .section2-article {
     display: flex;
     flex-direction: row;
+    justify-content: center;
     align-items: center;
-    border: 1px solid green; /*for visual purposes */
+    /* how do I set height to fit image in section2-article */
 }
 .section2-article > * {
     flex-basis: 50%;
     flex-grow: 1;
 }
 
-/* I may need to take off padding for media queries */
-.section2 { 
-    padding: 100px;
+/* centering image with flexbox within its container */
+.section2-image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* Padding 0px for section 2 and 3's h2 */
+.section-content-wrapper h2 {
+    padding-left: 0px;
 }
 
 /* Section3 */
 .section3 {
-    padding: 60px;
+    width: 100%;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    background-color: #0E204E;
 }
 
 .section3-article {
+    background-color: white;
+    color: #0E204E;
     display: flex;
+    justify-content: center;
     align-items: center;
-    border: 1px solid green; /*for visual purposes */
 }
 
 .section3-article > * {
     flex-basis: 50%;
     flex-grow: 1;
-    height: 100%;
 }
-.section3-p {
-    background-color: white;
-    color: #0E204E;
-    height: 100%;
+
+/* centering the image with flexbox */
+.section3-image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 /* Section4 */
 .section4 {
-    width: 80%;
+    width: 85%;
     margin: auto;
     text-align: center;
 } 
 
 .section4-article { 
-    /* padding: 25px; */
     display : flex;
     flex-direction: row;
     justify-content: space-around;
@@ -196,15 +215,14 @@ color: white;
 
 /* Section5 */
 .section5 {
-    width: 90%;
-    margin: auto;
+    width: 99%;
+    margin: 50px auto;
     text-align: center;
 }
 .gallery {
   display: flex;
   flex-wrap: wrap;
   list-style: none;
-  /* width: 100%; */
 }
 .gallery-item {
 flex-basis: 33%;
@@ -212,8 +230,21 @@ padding: 10px;
 
 }
 
-/* Section6 */
-li {
+/* Section 6*/
+.section6 {
+    width: 70%;
+    margin: 50px auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.section6 > * {
+    width: 50%;
+}
+
+.section6 li {
     list-style: none;
     padding: 10px;
     
@@ -223,27 +254,26 @@ li {
     background: rgba(14, 63, 51, 0.2);    
 }
 
-.section6 > * {
-    width: 50%;
-}
+
 .section6-h2 {
     padding-left: 40px;
 }
 
 
 /* Section7 */
-
-.section7,
-.section6 {
+.section7 {
     width: 70%;
+    margin: 50px auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
-
 .section7 > * {
     width: 50%;
 }
 
-.section7-1 {
-    padding-left: 60px;
+.section7-text {
     padding-right: 60px;
 }
 
@@ -263,58 +293,77 @@ li {
 .section8-form > * {
     margin: 10px;
     padding: 5px;
+    width:300px;
 }
 
 .form-message {
     padding-bottom: 70px;
 }
 
+.section8-button {
+    width: fit-content;
+    background-color:#0E204E;
+    color: white;
+    padding: 6px;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
 /* Footer */
+footer {
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    
+} 
+
 .footer-button {
     background-color: white;
     color: #0E204E;
 }
 
 footer > * {
+    width: 30%;
     padding: 40px;
-    margin-left: 80px;
-    margin-right: 80px;
+    
 }
 
 h3, h4 {
     font-size: 25px;
 }
 
+
+/* Hide mobile content in desktop view */
 .mobile-image,
 .mobile-icon {
     display: none;
 }
+
 
 /* Media Queries */
 
 /* Styles for phones, 600px and down */
 @media(max-width:600px){
 
-    /* padding for text */
-/* .textpadding,
-.section1-h2,
-.section2-p,
-.section3-h2,
-.section3-p {
-    padding: ;
-} */
-
-
+/* images, icons, section, other content to hide */
     .desktop-image,
     .desktop-icons-item,
     .section6,
+    header button,
+    .gallery,
     a {
         display: none;
     }
+
+    /* displaying mobile images */
     .mobile-image,
     .mobile-icon {
         display: block;
     }
+
     /* text align and font sizes */
     h2 {
         font-size: 2rem;
@@ -322,9 +371,17 @@ h3, h4 {
     }
     p {
         text-align: center;
+        line-height: 25px;
     }
-    /* section1 */
-    /* find a way to fit content on image */  
+
+
+    /* section1 */   
+   
+    .top-section-wrapper {
+        width: 100%;
+        border: 1px solid green;
+
+    } 
     .section1-text {
         width: 280px;
         color: white;
@@ -338,8 +395,9 @@ h3, h4 {
     }
 
     /* section2 */
-    .section2 {
+    .section-content-wrapper { 
         flex-direction: column;
+        width: 100%;
     }
     .section2-article {
         flex-direction: column;
@@ -348,13 +406,13 @@ h3, h4 {
         width: 280px;
         background: none;
         position: absolute;
-        right: 50px;
-
+        right: 100px;
+        /* is there a way to center text or do I have manually adjust */
+        /* or I can completely hide div and add in a new div for mobile */
     }
     
     /* section3 */
     .section3 {
-        flex-direction: column;
         background-color: white;
     }
     .section3-h2 {
@@ -368,24 +426,42 @@ h3, h4 {
 
     /* section4 */
     .section4 {
-        width: 50%;
-        margin: auto;
+        width: 100%;
     }
     .section4-article { 
-        width: max-content;
+        width: 100%;
         display : flex;
         flex-direction: column;
+        align-items: center;
     }
     
-
     .desktop-icons {
         background-color: #0E204E;
         color: white;
+        width: 100%;
     }
+    .desktop-icons > * {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    
 
     /* Section7 */
-    .section7 > *{
-        width: max-content;       
+    .section7 {
+        width: 100%;
+        background-color: #0E204E;
+        color: white;
+        
+    }
+    .section7 h2 {
+        color: white;
+    }
+    .section7 .button{
+        color: #0E204E;
+        background-color: white;
+        
     }
 
     /* Footer */
