--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
     --main-font-size: 15px;
 }
 
+* {
+    box-sizing: border-box;
+}
+
 
 /* General Css */
 img {
@@ -220,11 +224,12 @@ a {
 }
 
 .desktop-icons {
-    padding: 20px;
+    padding: 40px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     align-items: center;
+    width: 50%;
 }
 
 .desktop-icons > * {
@@ -409,6 +414,10 @@ h3 {
         display: block;
     }
 
+    header {
+        width: 90%;
+    }
+
 
 
 
@@ -416,14 +425,17 @@ h3 {
    
     /* Width and margin for sections 1 and 2 */
     .top-section-wrapper {
-        width: 100%;
+        width: 90%;
         margin: 30px auto;
+
+        /* Position property for section 1 */
+        position: relative;
 
     } 
     .section1-text {
         color: white;
         background: none; 
-        max-width: 350px;
+
         position: absolute;
         z-index: 1;
 
@@ -434,9 +446,13 @@ h3 {
     .section1-h2 {
         background: none;
     }
+
+    .section1-image {
+        width: 100%;
+    }
     
     .section1-image img {
-        min-width: 350px;
+        width: 100%;
     }
 
     .mobile-button {
@@ -444,7 +460,7 @@ h3 {
     }
 
 
-    /* wrapper for section 1 and 2 */
+    /* wrapper for section 2 and 3 */
     .section-content-wrapper { 
         flex-direction: column;
         width: 100%;
@@ -455,17 +471,25 @@ h3 {
     /* section2 */
     .section2-article {
         flex-direction: column;
+        position: relative;
+        width: 100%;
     }
 
     .section2-p {
-        max-width: 350px;
+        width: 100%;
         background: none;
         position: absolute;      
+        height: fit-content;
+    }
+
+    .section2-image {
+        width: 100%;
     }
 
     .section2-image img {
-        min-width: 350px;
+        width: 100%;
     }
+
 
     /* removing desktop padding and adding mobile padding for section 2 and 3's h2 */
     .section-content-wrapper div h2 {
@@ -496,17 +520,33 @@ h3 {
         margin: 0 auto;
     }
 
+    .section3-image {
+        width: 100%;
+    }
+
+    .section3-image img {
+        width: 90%;
+    }
+
 
 
     /* section4 */
     .section4 {
-        width: 100%;
+        width: 90%;
     }
     .section4-article { 
         width: 100%;
         display : flex;
         flex-direction: column;
         align-items: center;
+    }
+
+    .section4-one-picture {
+        width: 100%;
+    }
+
+    .section4-one-picture img {
+        width: 100%;
     }
 
     /* section4 icons */
@@ -552,14 +592,6 @@ h3 {
     /* displaying mobile gallery */
     .mobile-grid {
         display: block;
-    }
-
-    .section5 p {
-        width: 90%;
-        margin: 0 auto;
-    }
-
-    .mobile-grid {
         margin: 40px auto;
         width: max-content;
         display: grid;
@@ -567,6 +599,12 @@ h3 {
         grid-template-columns: 1fr 1fr;
     }
 
+    .section5 p {
+        width: 90%;
+        margin: 0 auto;
+    }
+
+    
     /* making bigger pictures fit in gallery  */
     .grid-wide-2 {
         grid-column: span 2;
